--- a/public/scss/components/_hero-header.scss
+++ b/public/scss/components/_hero-header.scss
@@ -1,56 +1,84 @@
 .hero {
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	width: 100vw;
-	height: 60vh;
+	align-items: flex-start;
+	height: 40vh;
 	overflow: hidden;
-	padding-top: 3rem;
+	padding-top: 2rem;
 
-	&.heroBG-postup {
-		background-color: #8cb4ac;
-	}
-
-	&.hero_wrapper {
-		display: flex;
-		flex-direction: column;
-		height: 100%;
-		width: 100%;
-		align-items: center;
-		justify-content: start;
-	}
-
-	&.tastebuds-hero_bg {
+	&--bg-tastebuds {
 		background-color: #f8eacd;
 	}
 
-	@include breakpoint(med) {
-		padding-top: 4rem;
-		width: 100vw;
-		height: 55vh;
+	&--bg-postup {
+		background-color: #8cb4ac;
+	}
 
-		.wrapper {
-			height: 100%;
-			margin: auto;
+	&__content {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		align-items: center;
+		justify-content: flex-start;
+	}
+
+	&__gif {
+		display: flex;
+		flex-direction: column;
+		overflow: hidden;
+		align-items: start;
+		justify-content: start;
+		margin: auto auto 0 auto;
+		width: 60%;
+		max-width: 15rem;
+	}
+
+	&__image-wrapper {
+		overflow: hidden;
+		margin: auto;
+		margin-bottom: 0;
+	}
+
+	&__image {
+		display: flex;
+		width: 80%;
+		max-width: 20rem;
+	}
+
+	@include breakpoint(med) {
+		height: 55vh;
+		padding-top: 3rem;
+		max-height: 36rem;
+
+		&__content {
+			justify-content: flex-end;
 		}
 
-		.hero_gif-wrapper {
-			display: flex;
-			overflow: hidden;
-			align-items: start;
-			justify-content: start;
-			margin: auto;
-			width: 53%;
-			margin: 0 auto;
+		&__gif-wrapper {
+			width: 35%;
+			max-width: 20rem;
+			height: 100%;
+		}
+
+		&__image-wrapper {
+			max-width: 30rem;
 		}
 	}
-}
 
-.tastebuds-hero_image-wrapper {
-	display: flex;
-	overflow: hidden;
-	margin: auto;
-	margin-top: auto;
-	margin-bottom: 0;
-	width: 53%;
+	@include breakpoint(lg) {
+		height: 55vh;
+		padding-top: 4rem;
+		max-height: none;
+
+		&__gif {
+			margin: auto auto 0 auto;
+			width: 55%;
+			max-width: 18rem;
+		}
+	}
+
+	@include breakpoint(xl) {
+		&__image-wrapper {
+			max-width: 40rem;
+		}
+	}
 }
