--- a/public/scss/tastebuds/_sitemap.scss
+++ b/public/scss/tastebuds/_sitemap.scss
@@ -46,7 +46,7 @@
 	height: 100%;
 	background-color: white;
 	width: 15rem;
-	height: calc(283 / 16) rem;
+	height: 17rem;
 }
 
 .sitemap_headline {
